[gd_scene load_steps=19 format=2]

[ext_resource path="res://intro/picture/main_menu-2.png" type="Texture" id=1]
[ext_resource path="res://Fonts/Kenney Pixel Square.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/Kenney Mini Square.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://intro/script/Main_menu.gd" type="Script" id=4]
[ext_resource path="res://intro/picture/book.png" type="Texture" id=5]
[ext_resource path="res://intro/picture/settings.png" type="Texture" id=6]
[ext_resource path="res://intro/picture/leaf2.png" type="Texture" id=7]
[ext_resource path="res://intro/sounds/forest-lullaby.wav" type="AudioStream" id=8]
[ext_resource path="res://intro/settings.tscn" type="PackedScene" id=9]
[ext_resource path="res://intro/Quit.tscn" type="PackedScene" id=10]
[ext_resource path="res://intro/badges.tscn" type="PackedScene" id=11]
[ext_resource path="res://intro/Spell_Book.tscn" type="PackedScene" id=12]
[ext_resource path="res://intro/save_files.tscn" type="PackedScene" id=13]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 3 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0.11236, 0.136364 ), 0.0, 0.0, 0, 0, Vector2( 0.314607, 0.709091 ), 0.0, 0.0, 0, 0, Vector2( 0.578652, 0.309091 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 100, 5, 0 )
flag_disable_z = true
gravity = Vector3( -100, 190, 100 )
initial_velocity = -10.0
initial_velocity_random = 0.1
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -100.0
angle = 720.0
angle_random = 1.0
angle_curve = SubResource( 6 )

[node name="Main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 3
custom_constants/margin_top = 3
custom_constants/margin_left = 3
custom_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 317.0
margin_bottom = 177.0
custom_constants/separation = 18

[node name="seperator" type="Control" parent="MarginContainer/VBoxContainer"]
margin_right = 314.0

[node name="label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 314.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "WELCOME TO SYNTAXIA"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 317.0
margin_bottom = 177.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 125.0
margin_right = 188.0
margin_bottom = 174.0
rect_pivot_offset = Vector2( -312, -28 )
custom_constants/separation = 10
alignment = 1

[node name="seperator5" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 63.0
margin_bottom = 19.0

[node name="seperator6" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 63.0
margin_bottom = 29.0

[node name="seperator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 63.0
margin_bottom = 39.0

[node name="Start_new" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 63.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 2 )
text = "Start new"

[node name="Continue" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 63.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 2 )
text = "Continue"

[node name="Badges" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 107.0
margin_right = 63.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 2 )
text = "badges"

[node name="Exit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 63.0
margin_bottom = 155.0
custom_fonts/font = SubResource( 2 )
text = "exit"

[node name="Particles2D" type="Particles2D" parent="MarginContainer/HBoxContainer"]
position = Vector2( 157, 5 )
scale = Vector2( 1.6, 0.9 )
amount = 10
process_material = SubResource( 3 )
texture = ExtResource( 7 )

[node name="book" type="TextureButton" parent="."]
margin_left = 261.0
margin_top = 20.0
margin_right = 281.0
margin_bottom = 40.0
texture_normal = ExtResource( 5 )

[node name="settings" type="TextureButton" parent="."]
margin_left = 290.0
margin_top = 19.0
margin_right = 310.0
margin_bottom = 39.0
action_mode = 0
texture_normal = ExtResource( 6 )

[node name="settings2" parent="." instance=ExtResource( 9 )]

[node name="Panel" parent="settings2" index="0"]
margin_bottom = 1.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="settings2"]
stream = ExtResource( 8 )
volume_db = -10.0
autoplay = true

[node name="Quit" parent="." instance=ExtResource( 10 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="badges" parent="CanvasLayer" instance=ExtResource( 11 )]

[node name="Spell_Book" parent="CanvasLayer" instance=ExtResource( 12 )]

[node name="save_files" parent="." instance=ExtResource( 13 )]

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Badges" to="." method="_on_Badges_pressed"]
[connection signal="pressed" from="book" to="." method="_on_book_pressed"]
[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]

[editable path="settings2"]
[editable path="CanvasLayer/badges"]
